OO-5807: support request with ranges in tunnel component